--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-config-airbnb": "4.0.0"
   },
   "dependencies": {
-    "keymirror": "0.1.1",
+    "keymirror": "0.1.1"
   },
   "scripts": {
     "test": "node_modules/.bin/eslint *.js"
